legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr34965.c-4.8.2-0.out.txt
pr34965.c: In function ‘bar’:
pr34965.c:10:16: error: called object is not a function or function pointer
   foo (i && j) ();  
                ^
pr34965.c:11:18: error: called object is not a function or function pointer
   foo (!i || !j) ();  
                  ^
pr34965.c:12:18: error: called object is not a function or function pointer
   foo (!i == !j) ();  
                  ^
